[package]
name = "bevy_jam6_game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
bevy_rapier3d = "0.30.0"
# bevy_simple_subsecond_system = { git = "https://github.com/TheBevyFlock/bevy_simple_subsecond_system", version = "0.2" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
